fix dark mode

--- a/src/main/frontend/src/assets/index.css
+++ b/src/main/frontend/src/assets/index.css
@@ -21,6 +21,10 @@
         @apply flex flex-col gap-2 max-w-md;
     }
 
+    label {
+        @apply flex items-center justify-between;
+    }
+
     h1,
     h2,
     h3,
